<resources>
    <string name="app_name">eat What</string>
    <string name="now">Now</string>
    <string name="current_loc">Current location</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="salmon_quin"> salmon quinoa bowl </string>
    <string name="nutrition_f"> Nutrition Facts </string>
    <string name="salad"> salad </string>
    <string name="ingredients"> Ingredients </string>
    <string name="nutrition1"> 484 Calories </string>
    <string name="nutrition2"> 28g Fat </string>
    <string name="nutrition3"> 28g Carbs </string>
    <string name="nutrition4"> 30g Protein </string>
    <string name="close_button_description">CloseButton</string>
    <string name="find_recipe">Find Recipe</string>
    <string name="find_restaurants">Find Restaurants</string>
    <string name="mealname" />
    <string name="alerts">alerts</string>
    <string name="settings" />
    <string name="notifi">Notification</string>
    <string name="general">General</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="battery_saver">Battery Saver Only</string>
    <string name="auto_play">auto play</string>
    <string name="enabled">Enabled</string>
    <string name="display">Display</string>
    <string name="wallpaper">wallpaper</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="device_theme">Device Theme</string>
    <string name="brightness_level">Brightness_Level</string>
    <string name="value_percentage">value percentage</string>
    <string name="automatic">Automatic</string>
    <string name="night_mode">Night</string>
    <string name="night_mode_summary">night mode summary</string>
    <string name="hello_world">hello_world</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="user_information">User Information\n</string>
    <string name="user_name">User Name</string>
    <string name="preferences">Preferences</string>
    <string name="Height">Height</string>
    <string name="body_weight">Body weight</string>
    <string name="chinese_food">Chinese food</string>
    <string name="western_food">Western food</string>
    <string name="japanese_food">Japanese food</string>
    <string name="korean_food">Korean food</string>
    <string name="indian_cuisine">Indian cuisine</string>
    <string name="thai_cuisine">Thai cuisine</string>
    <string name="certain_foods_question">Are you allergic to certain foods?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="certain_foods">Certain foods</string>
    <string name="peanuts">Peanuts</string>
    <string name="milk">Milk</string>
    <string name="eggs">Eggs</string>
    <string name="soy">Soy</string>
    <string name="wheat">Wheat</string>
    <string name="fish">Fish</string>
    <string name="nuts">Nuts</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="name">Name</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Seach">Seach</string>
    <string name="Return">Return</string>
    <string name="filter_by">Filter by</string>
    <string name="Area">Area</string>
    <string name="Hide">Hide</string>
    <string name="language">language</string>
    <string name="central_and_western">Central and Western</string>
    <string name="hong_kong">HONG KONG</string>
    <string name="wan_chai">Wan Chai</string>
    <string name="eastern">Eastern</string>
    <string name="southern">Southern</string>
    <string name="kowloon">KOWLOON</string>
    <string name="yau_tsim_mong">Yau Tsim Mong</string>
    <string name="sham_shui_po">Sham Shui Po</string>
    <string name="kowloon_city">Kowloon City</string>
    <string name="wong_tai_sin">Wong Tai Sin</string>
    <string name="kwun_tong">Kwun Tong</string>
    <string name="tsuen_wan">Tsuen Wan</string>
    <string name="tuen_mun">Tuen Mun</string>
    <string name="yuen_long">Yuen Long</string>
    <string name="north">North</string>
    <string name="tai_po">Tai Po</string>
    <string name="sha_tin">Sha Tin</string>
    <string name="sai_kung">Sai Kung</string>
    <string name="islands">Islands</string>
    <string name="preference">Preference</string>
    <string name="cuisine">Cuisine</string>
    <string name="japanese">Japanese</string>
    <string name="sushi_sashimi">Sushi/Sashimi</string>
    <string name="buffet">Buffet</string>
    <string name="dim_sum_restaurant">Dim Sum Restaurant</string>
    <string name="dessert">Dessert</string>
    <string name="french">French</string>
    <string name="american">American</string>
    <string name="hot_pot">Hot Pot</string>
    <string name="sichuan">Sichuan</string>
    <string-array name="certainFoodsQuestionOptions">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="profile_index">Profile</string>
    <string name="foodie_lover">Foodie lover</string>
    <string name="profile_email">123@gmail.com</string>
    <string name="title_activity_bottomnavigation">BottomnavigationActivity</string>
    <string name="RandomMeal">Random Meal</string>
    <string name="_1_3_steps">1 / 3 steps</string>
    <string name="age_hint">Enter your age</string>
    <string name="weight_hint">Enter your weight (kg or lbs)</string>
    <string name="height_hint">Enter your height (cm or inches)</string>
    <string name="Vegetarian">Vegetarian</string>
    <string name="_2_3_steps">2 / 3 steps</string>
    <string name="set_dietary_restrictions">Set Dietary Restrictions:</string>
    <string name="next">Next</string>
    <string name="Vegan">Vegan</string>
    <string name="GlutenFree">glutenFree</string>
    <string name="dairyFree">DairyFree</string>
    <string name="Organic">Organic</string>
    <string name="_3_3_steps">3 / 3 steps</string>
    <string name="Italian">Italian</string>
    <string name="Japanese">Japanese</string>
    <string name="Mediterranean">Mediterranean</string>
    <string name="Chinese">Chinese</string>
    <string name="Mexican">Mexican</string>
    <string name="Indian">Indian</string>
    <string name="Thai">Thai</string>
    <string name="American">American</string>
    <string name="Greek">Greek</string>
    <string name="French">French</string>
    <string name="cusineType">What type of cuisine do you prefer?</string>
    <string name="ProfileActivity">ProfileActivity</string>
    <string name="Dish_Types">Dish Types</string>
    <string name="profile_image">Profile Image</string>
    <string name="email">Email</string>
    <string name="dietary_restrictions">Dietary Restrictions</string>
    <string name="cuisine_preferences">Cuisine Preferences</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="age">Age</string>
    <string name="address_1"><![CDATA[G/F(PORTION) & 2/F, COMMERCIAL CENTRE, CHEUNG HONG ESTATE, TSING YI, KWAI CHUNG, NEW TERRITORIES]]></string>



</resources>