<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<PreferenceCategory
    android:title="@string/alerts">
    <Preference
        android:key="text"
        android:title="@string/notifi"/>
</PreferenceCategory>

        <ListPreference
            android:key="language_preference"
            android:title="@string/language"
            android:dialogTitle="@string/language"
            android:entries="@array/language_names"
            android:entryValues="@array/language_values"
            android:defaultValue="en"
            android:summary="%s"/>


    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:key="night_mode"
            android:title="@string/night_mode"
            android:summary="@string/night_mode_summary"/>


        <MultiSelectListPreference
            android:key="multi_select_preference"
            android:title="@string/auto_play"
            android:summary="@string/enabled"
            android:entries="@array/auto_play_entries"
            app:entryValues="@array/entry_values"
            android:dialogTitle="@string/auto_play"


        />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="expandable"
        android:title="@string/display"
        app:initialExpandedChildrenCount="1">

        <SeekBarPreference
            android:key="brightness_preference"
            android:title="@string/brightness_level"
            android:summary="@string/value_percentage"
            android:max="255"
            android:defaultValue="125" />

        <Preference
            android:key="intent_preference"
            android:title="@string/wallpaper"
            android:summary="@string/change_wallpaper"/>

        <DropDownPreference
            android:key="drop_down_preference"
            android:title="@string/device_theme"
            android:summary="@string/automatic"
            android:entries="@array/theme_entries"
            android:entryValues="@array/entry_values"/>
    </PreferenceCategory>


</PreferenceScreen>


