<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/profile_image_description"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_marginTop="24dp"
            android:hint="@string/name" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_name"
            android:layout_marginTop="16dp"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/profile_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_email"
            android:layout_marginTop="16dp"
            android:hint="@string/age" />

        <TextView
            android:id="@+id/profile_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_age"
            android:layout_marginTop="16dp"
            android:hint="@string/weight" />

        <TextView
            android:id="@+id/profile_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_weight"
            android:layout_marginTop="16dp"
            android:hint="@string/height" />

        <TextView
            android:id="@+id/profile_dietaryRestrictions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_height"
            android:layout_marginTop="16dp"
            android:hint="@string/dietary_restrictions" />

        <TextView
            android:id="@+id/profile_cuisinePreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_dietaryRestrictions"
            android:layout_marginTop="16dp"
            android:hint="@string/cuisine_preferences" />

    </RelativeLayout>
</ScrollView>
