<!-- activity_step3.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3_3_steps"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/custom_progress_bar"
        android:progress="100"
        android:layout_marginBottom="24dp"/>
<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20dp"
    android:text="@string/cusineType"/>
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:justifyContent="center"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/buttonItalian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Italian"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonJapanese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Japanese"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonMediterranean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Mediterranean"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/buttonIndian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Indian"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/buttonThai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Thai"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/buttonAmerican"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/American"
            android:onClick="onDietaryRestrictionButtonClick"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/buttonGreek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Greek"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/buttonFrench"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/French"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/buttonVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Vegetarian"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/buttonChinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Chinese"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonMexican"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Mexican"
            android:textColor="@color/button_text_color"
            android:elevation="4dp"
            android:onClick="onDietaryRestrictionButtonClick"
            android:layout_marginEnd="8dp"
            tools:ignore="DuplicateIds" />

    </com.google.android.flexbox.FlexboxLayout>


    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:onClick="submitForm"/>
</LinearLayout>
