<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="48sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/Email"
        android:drawableStart="@drawable/baseline_alternate_email_24"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/Password"
        android:drawableStart="@drawable/password"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp" />

</LinearLayout>