<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/profile_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/profile_index"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodie_lover"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_section"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <!-- Replicate this Button structure for as many buttons as you need -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:text="My review"
            android:textAlignment="viewStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"

            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:text="Person Information"
            android:textAlignment="viewStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"

            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:text="Account Settings"
            android:textAlignment="viewStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:text="Friend Upduate"
            android:textAlignment="viewStart" />



    </LinearLayout>

</RelativeLayout>
